[gd_scene load_steps=3 format=2]

[ext_resource path="res://global_theme.tres" type="Theme" id=1]
[ext_resource path="res://GUI/Embark/SupplyCounter.gd" type="Script" id=2]

[node name="SupplyCounter" type="Control"]
anchor_left = 0.181
anchor_top = 0.067
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -90.5
margin_top = -18.894
margin_right = -500.0
margin_bottom = -282.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resource" type="Label" parent="HBoxContainer"]
margin_top = 3.0
margin_bottom = 36.0

[node name="MinusButton" type="Button" parent="HBoxContainer"]
margin_left = 4.0
margin_right = 24.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 0 )
disabled = true
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Amount" type="Label" parent="HBoxContainer"]
margin_left = 28.0
margin_top = 3.0
margin_right = 66.0
margin_bottom = 36.0
rect_min_size = Vector2( 38, 0 )
text = "0/0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusButton" type="Button" parent="HBoxContainer"]
margin_left = 70.0
margin_right = 90.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 0 )
text = ">"
[connection signal="pressed" from="HBoxContainer/MinusButton" to="." method="_on_MinusButton_pressed"]
[connection signal="pressed" from="HBoxContainer/PlusButton" to="." method="_on_PlusButton_pressed"]
